Fixed header on small screens - hamburger stays top row, smaller font for brand

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -17,6 +17,11 @@
                 margin-top: 2px;
                 margin-bottom: 2px;
                 display: inline-block;
+                @media (max-width: 500px) {
+                    font-size: 1.2em;
+                    padding-top: 0.2em;
+                    padding-bottom: 0.2em;
+                }
             }
         }
     }
